Add Stan model and interface function
* Add a Stan ddm model. See inst/stan/ddm.stan
* Using rstantools::use_rstan, created an interface function to this
  Stan model, see R/ddm_stan
* Add new vignette
* Update readme
* Bump to version 0.0.1

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,13 +21,13 @@ It also provides a function for drawing samples from a drift-diffusion model.
 
 ## Installation
 
-You can install the development version of norbertr like so:
+You can install the development version of `norbertr` like so:
 
 ``` r
 devtools::install_github('mark-andrews/norbertr')
 ```
 
-This package uses C++ code.
+This package uses Stan, rstan, and C++ code.
 
 ## Example
 
